membuat satu tabel produk curd

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">uaspam</string>
+    <string name="loading" />
+    <string name="loading_failed" />
+    <string name="retry" />
 </resources>
